src/objects/mana_Inputs_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Birds_condition__c</fullName>
        <label>Birds condition</label>
        <picklist>
            <picklistValues>
                <fullName>Birds_condition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MANA Inputs deliveries</relationshipLabel>
        <relationshipName>MANA_Inputs_deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_Correct__c</fullName>
        <formula>substitute( District__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inputs_condition__c</fullName>
        <label>Inputs condition</label>
        <picklist>
            <picklistValues>
                <fullName>Incompleto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completo y en buen estado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Municipality_Correct__c</fullName>
        <formula>substitute( Municipality__c  , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_families_received_inputs__c</fullName>
        <label>Number of families received inputs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_10__c</fullName>
        <label>Picture 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_1__c</fullName>
        <label>Picture 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_2__c</fullName>
        <label>Picture 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Region_Correct__c</fullName>
        <formula>substitute(  Region__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>MANA Inputs deliveries</relationshipLabel>
        <relationshipName>MANA_Inputs_deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tools_condition__c</fullName>
        <label>Tools condition</label>
        <picklist>
            <picklistValues>
                <fullName>Incompleto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completo y en buen estado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>type_of_Delivery__c</fullName>
        <label>Type of delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aves</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>MANA Inputs delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Birds_condition__c</columns>
        <columns>Contact__c</columns>
        <columns>Date__c</columns>
        <columns>District__c</columns>
        <columns>type_of_Delivery__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Municipality__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MANA Inputs delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MANA Inputs deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>